--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -12,13 +12,56 @@ body {
 background-color: #f5f5f5; 
 }
 
-h1{
-    color:#ff9800;
-    font-family: lato;
+/*----Headings---*/
+h1 {
+    color:#c43e00;
+    font-family: sans-serif ;
     text-transform: uppercase;
+    text-align: center;
+    background-color: #000000;
+    
+    
 }
+
+h2{
+    font-family:sans-serif;
+    font-size: 250%;
+    position: relative;
+    left: 200px;
+}
+
+h3{
+    font-family: sans-serif;
+    position: relative;
+    left: 100px;
+}
+
+
+
+/*------NavBar---*/
   
  .nav {
-    font-size:120%;
+    font-size:100%;
     background-color: #000000;
+    color:#fff;
+    
+ }
+
+ .nav-link{
+    color: #fff;
+    font-family: Arial  ;
+ }
+
+
+ /*----Images----*/
+ *{
+    box-sizing:border-box;
+ }
+
+ .container 2 {
+    display:flex;
+    justify-content:space-between;
+    padding: 40px;
+    width: 60%;
+    
  }
