--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -27,13 +27,19 @@ h2{
     font-family:sans-serif;
     font-size: 250%;
     position: relative;
-    left: 200px;
+    left: 400px;
 }
 
 h3{
     font-family: sans-serif;
     position: relative;
-    left: 100px;
+    left: 250px;
+}
+
+/*-------section---*/
+.h3-text{
+    font-family:"Exo", sans-serif  ;
+    font-size: 120%;
 }
 
 
@@ -64,4 +70,26 @@ h3{
     padding: 40px;
     width: 60%;
     
+ }
+
+ /*----Footer--*/
+
+ h5{
+    margin: 0;
+ }
+
+ .uppercase-subheading{
+    text-transform: uppercase;
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fff;
+ }
+
+ footer{
+    background-color: #212121  ;
+ }
+
+ footer p{
+    color:#fff;
+    font-family:sans-serif ;
  }
