--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,14 +26,11 @@ h1 {
 h2{
     font-family:sans-serif;
     font-size: 150%;
-   
-    
-}
+    }
 
 h3{
     font-family: sans-serif;
-    position: ;
-    ;
+    
 }
 
 .menu-title{
@@ -44,6 +41,8 @@ h3{
    text-transform: uppercase;
  
 }
+
+
 
 /*-------section---*/
 .h3-text{
@@ -63,12 +62,14 @@ h3{
     font-size:100%;
     background-color: #000000;
     color:#fff;
+    text-align: center;
     
  }
 
  .nav-link{
     color: #fff;
     font-family: Arial  ;
+    text-align: center;
  }
 
 
@@ -85,18 +86,24 @@ h3{
     
  }
 
- .picRight{
-  position:relative ;
-  left: 900px;
-  bottom: 100px;
- }
+ 
+/*-----Contact Form----*/
+.contact{
+   font-size: 200%;
+   font-weight: 300%;
+   font-family: arial;
+}
 
- .mapPic{
-   position: absolute;
-   left: 300px;
-   bottom: 30px;
-   height: 20%;
- }
+.detail-text{
+ font-size: 20px ;
+}
+
+.btn{
+   position: relative;
+   left: 140px;
+   padding:30px;
+
+}
 
 
  /*----Footer--*/
