--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,11 @@ h3{
    color: #f9a825;
  }
 
+ .card-img-top{
+   width: 100%;
+   height: 15vw;
+   object-fit: cover;
+ }
 
 /*-----Contact Form----*/
 .contact{
