--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,14 +74,9 @@ h3{
 
 
  /*----Images----*/
- *{
-    box-sizing:border-box;
- }
-
  
 
  
-
  .card-img-top{
    width: 100%;
    height: 15vw;
@@ -105,10 +100,11 @@ h3{
    position: relative;
    left: 140px;
    padding:30px;
+  }
 
-}
-
-
+ .float-start{
+   height: 100%  ;
+ }
 
 
  /*----Footer--*/
@@ -132,3 +128,5 @@ h3{
     color:#fff;
     font-family:sans-serif ;
  }
+
+ 
