--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Roboto:ital,wght@1,700&display=swap');
-
 
 
 header{
@@ -8,7 +6,7 @@ header{
 }
 
 body {
-  font-family: Roboto sans-serif ;
+  font-family: "Roboto" , sans-serif ;
 background-color: #f5f5f5; 
 }
 
@@ -88,7 +86,6 @@ h3{
 /*-----Contact Form----*/
 .contact{
    font-size: 200%;
-   font-weight: 300%;
    font-family: arial;
 }
 
