--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ header{
 
 body {
   font-family: "Roboto" , sans-serif ;
-background-color: #f5f5f5; 
+background-color: #819ca9; 
 }
 
 /*----Headings---*/
@@ -81,6 +81,8 @@ h3{
   .card-text{
   font-family: arial;
   }
+
+ 
 /*-----Contact Form----*/
 .contact{
    font-size: 200%;
@@ -93,7 +95,7 @@ h3{
 
 .btn{
    position: relative;
-   left: 140px;
+   left: 130px;
    padding:30px;
   }
 
